{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 15,
  "lineage": "8681988d-b3d9-c12f-3c6f-ce60dbac9eb7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ddfba243cbee3768",
            "arn": "arn:aws:ec2:ap-south-1:038462793081:instance/i-07bc7d48cbd640c8e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07bc7d48cbd640c8e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09adbd695ea8fb529",
            "private_dns": "ip-10-0-1-35.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.35",
            "public_ip": "15.207.101.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d23a94c8b1cb08b9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ed28051fee21ad5",
            "tags": {
              "Name": "MyTestEC2"
            },
            "tags_all": {
              "Name": "MyTestEC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08c9d8004bee24251"
            ]
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_subnet.my_test_subnet",
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mytestigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:038462793081:internet-gateway/igw-0af4df3841e9ec051",
            "id": "igw-0af4df3841e9ec051",
            "owner_id": "038462793081",
            "tags": {
              "Name": "MyTestIGW"
            },
            "tags_all": {
              "Name": "MyTestIGW"
            },
            "vpc_id": "vpc-04264a20e0da59035"
          },
          "dependencies": [
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:038462793081:route-table/rtb-00091a455fdb04b10",
            "id": "rtb-00091a455fdb04b10",
            "owner_id": "038462793081",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af4df3841e9ec051",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyTestIGW"
            },
            "tags_all": {
              "Name": "MyTestIGW"
            },
            "timeouts": null,
            "vpc_id": "vpc-04264a20e0da59035"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mytestigw",
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084bd52ab4d7b3709",
            "route_table_id": "rtb-00091a455fdb04b10",
            "subnet_id": "subnet-07ed28051fee21ad5"
          },
          "dependencies": [
            "aws_internet_gateway.mytestigw",
            "aws_route_table.public_rt",
            "aws_subnet.my_test_subnet",
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:038462793081:security-group/sg-08c9d8004bee24251",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-08c9d8004bee24251",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTP",
            "name_prefix": "",
            "owner_id": "038462793081",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04264a20e0da59035"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_test_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:038462793081:subnet/subnet-07ed28051fee21ad5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ed28051fee21ad5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "038462793081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyTestSubnet"
            },
            "tags_all": {
              "Name": "MyTestSubnet"
            },
            "vpc_id": "vpc-04264a20e0da59035"
          },
          "dependencies": [
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:038462793081:vpc/vpc-04264a20e0da59035",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-031b3a0b0e4f60044",
            "default_route_table_id": "rtb-008a735fbf7463aae",
            "default_security_group_id": "sg-01dfb4355d97921ad",
            "dhcp_options_id": "dopt-0e72f04072e68e2c3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04264a20e0da59035",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-008a735fbf7463aae",
            "owner_id": "038462793081",
            "tags": {
              "Name": "MyTestVPC"
            },
            "tags_all": {
              "Name": "MyTestVPC"
            }
          }
        }
      ]
    }
  ]
}